assets/css/style.css
/* ... */
.darkmode{
  --spanish-gray: hsl(0, 0%, 60%);
  --sonic-silver: hsl(0, 0%, 47%);
  --eerie-black: white;
  --salmon-pink: hsl(353, 100%, 78%);
  --sandy-brown: hsl(29, 90%, 65%);
  --bittersweet: hsl(0, 100%, 70%);
  --ocean-green: hsl(152, 51%, 52%);
  --davys-gray: white;
  --cultured: #455d7a ;
  --white: #2a2a40;
  --onyx: hsl(0, 0%, 27%);
  --first-color: #233142; 
  --second-color: #455d7a; 
  --third-color: #f95959; 
  --fourth-color: #e3e3e3;

}
#theme-switch{
  height: 40px;
  width: 40px;
  padding: 0;
  border-radius: 50%;
  background-color: var(--white);
  display: flex;
  justify-content: center;
  align-items: center;
  float: right;
  outline: none;
}
#theme-switch:hover{
  background-color: var(--bittersweet);
}
#theme-switch svg{
  fill: var(--onyx);
}
#theme-switch svg:last-child{
  display: none;
}
.darkmode #theme-switch svg:first-child{
  display: none;
}
.darkmode #theme-switch svg:last-child{
  display: block;
}

ion-icon{
  color: var(--eerie-black);
}
.icon-inner, .ionicon, svg {
stroke: tomato;
}

/*-----------------------------------*\
  #RESET
\*-----------------------------------*/

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a {
  text-decoration: none;
}

li {
  list-style: none;
}

button {
  background: none;
  font: inherit;
  border: none;
  cursor: pointer;
  
}


img,
ion-icon,
button,
a {
  display: block;
}

span {
  display: inline-block;
}

html {
  font-family: "Poppins", sans-serif;
  overscroll-behavior: contain;
}

input {
  display: block;
  width: 100%;
  font: inherit;
}

input::placeholder {
  font: inherit;
}

body {
  background: var(--white) ;
}

/**
 * scrollbar style
 */

body::-webkit-scrollbar {
  width: 15px;
}

body::-webkit-scrollbar-track {
  background: var(--white);
  border-left: 1px solid var(--cultured);
}

body::-webkit-scrollbar-thumb {
  background: hsl(0, 0%, 80%);
  border: 3px solid var(--white);
  border-radius: 10px;
}

body::-webkit-scrollbar-thumb:hover {
  background: hsl(0, 0%, 70%);
}

/*-----------------------------------*\
  #REUSED STYLE
\*-----------------------------------*/

.container {
  padding: 0 15px;
}

.has-scrollbar {
  padding-bottom: 5px;
}

.has-scrollbar::-webkit-scrollbar {
  width: 12px; /* for vertical scroll */
  height: 12px; /* for horizontal scroll */
}

.has-scrollbar::-webkit-scrollbar-thumb {
  background: transparent;
  border: 3px solid var(--white);
  border-radius: 20px;
}

.has-scrollbar:hover::-webkit-scrollbar-thumb {
  background: hsl(0, 0%, 90%);
}

.has-scrollbar::-webkit-scrollbar-thumb:hover {
  background: hsl(0, 0%, 80%);
}

.title {
  color: var(--eerie-black);
  font-size: var(--fs-5);
  font-weight: var(--weight-600);
  letter-spacing: 0.4px;
  text-transform: capitalize;
  padding-bottom: 10px;
  border-bottom: 1px solid var(--cultured);
  margin-bottom: 30px;
}

/*-----------------------------------*\
  #MAIN
\*-----------------------------------*/

/**
 * overlay 
 */

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background: hsla(0, 0%, 0%, 0.5);
  opacity: 0;
  pointer-events: none;
  z-index: 15;
  transition: 0.5s ease;
}

.overlay.active {
  opacity: 1;
  pointer-events: all;
}

/**
 * MODAL 
 */

.modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background: hsla(0, 0%, 0%, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  z-index: 10;
  animation: popup 1s ease-in-out 5s forwards;
}

@keyframes popup {
  0% {
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
  }

  100% {
    opacity: 1;
    visibility: visible;
    pointer-events: all;
  }
}

.modal.closed {
  display: none;
}

.modal-close-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.newsletter-img {
  display: none;
}

.modal-content {
  position: relative;
  max-width: 350px;
  margin: 20px;
  background: var(--white);
  border-radius: var(--border-radius-md);
  overflow: hidden;
  z-index: 2;
  animation: scaleUp 0.5s ease-in-out 5s forwards;
}

@keyframes scaleUp {
  0% {
    transform: scale(0.9);
  }
  100% {
    transform: scale(1);
  }
}

.modal-close-btn {
  position: absolute;
  top: 15px;
  right: 15px;
  background: var(--salmon-pink);
  color: var(--white);
  font-size: 16px;
  padding: 5px;
  border-radius: var(--border-radius-sm);
}

.modal-close-btn:hover {
  opacity: 0.9;
}

.modal-close-btn ion-icon {
  --ionicon-stroke-width: 70px;
}

.newsletter {
  padding: 50px 30px;
  text-align: center;
}

.newsletter-header {
  margin-bottom: 20px;
}

.newsletter-title {
  color: var(--onyx);
  font-size: var(--fs-2);
  font-weight: var(--weight-600);
  margin-bottom: 10px;
}

.newsletter-desc {
  color: var(--sonic-silver);
  font-size: var(--fs-7);
  line-height: 1.6;
}

.email-field {
  font-size: var(--fs-7);
  padding: 8px 16px;
  border-radius: var(--border-radius-sm);
  border: 1px solid var(--cultured);
  margin-bottom: 16px;
}

.btn-newsletter {
  background: var(--eerie-black);
  color: var(--white);
  font-size: var(--fs-7);
  font-weight: var(--weight-600);
  text-transform: uppercase;
  padding: 10px 15px;
  border-radius: var(--border-radius-sm);
  margin: auto;
  transition: var(--transition-timing);
}

.btn-newsletter:hover {
  background: var(--salmon-pink);
}

/**
 * NOTIFICATION TOAST 
 */

.notification-toast {
  position: fixed;
  bottom: 80px;
  left: 20px;
  right: 20px;
  background: var(--white);
  max-width: 300px;
  display: flex;
  align-items: flex-start;
  gap: 15px;
  padding: 15px;
  border-radius: var(--border-radius-md);
  box-shadow: 0 5px 20px hsla(0, 0%, 0%, 0.15);
  transform: translateX(calc(-100% - 40px));
  transition: 0.5s ease-in-out;
  z-index: 5;
  animation: slideInOut 30s ease-in-out infinite;
}
/* ... */

